# openjtalk-pitch-shift

./: .gitignore  MANIFEST.in  README.md  README.txt  pitsh.py  pyproject.toml
.github/workflows/: publish.yml
hts_engine_API-1.10/include/: HTS_engine.h
hts_engine_API-1.10/lib/: HTS_engine.c.bak2  HTS_sstream.c  Makefile  libHTSEngine.a.sys_backup
hts_engine_API-1.10/lib/.deps/: HTS_audio.Po  HTS_engine.Po  HTS_gstream.Po  HTS_misc.Po  HTS_model.Po  HTS_pstream.Po  HTS_sstream.Po  HTS_vocoder.Po
open_jtalk-1.11/: .gitignore  out_label.txt  output3.lab
open_jtalk-1.11/jpcommon/: Makefile  Makefile.bak  jpcommon.c  jpcommon.h  jpcommon_label.c
open_jtalk-1.11/jpcommon/.deps/: jpcommon_node.Po
open_jtalk-1.11/mecab/: Makefile  Makefile.bak
open_jtalk-1.11/mecab-naist-jdic/: Makefile  Makefile.bak
open_jtalk-1.11/mecab/src/: Makefile
open_jtalk-1.11/mecab2njd/: Makefile  Makefile.bak
open_jtalk-1.11/mecab2njd/.deps/: mecab2njd.Po
open_jtalk-1.11/njd/: Makefile
open_jtalk-1.11/njd/.deps/: njd_node.Po
open_jtalk-1.11/njd2jpcommon/: Makefile  Makefile.bak
open_jtalk-1.11/njd_set_accent_phrase/: Makefile  Makefile.bak
open_jtalk-1.11/njd_set_accent_type/: Makefile
open_jtalk-1.11/njd_set_digit/: Makefile
open_jtalk-1.11/njd_set_long_vowel/: Makefile  Makefile.bak
open_jtalk-1.11/njd_set_pronunciation/: Makefile  Makefile.bak
open_jtalk-1.11/njd_set_unvoiced_vowel/: Makefile  Makefile.bak
open_jtalk-1.11/text2mecab/: Makefile
pitsh/: __init__.py  speak_logic.py
pitsh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pitsh/hts_engine_API-1.10/: Makefile  config.status
pitsh/open_jtalk-1.11/: Makefile  Makefile.bak  config.status  san.labels
pitsh_jtalk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+60 files in other folders)
