[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitsh-jtalk"
version = "0.1.1"  
description = "特定の文字でピッチが変わる改造版Open JTalk"
authors = [{name = "maki249"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["pitsh"]

[tool.setuptools.package-data]
"*" = [
    "dict/*",
    "voice/*",
    "open_jtalk-1.11/bin/open_jtalk"
]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*"]