[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitsh"
version = "0.1.9"
description = "特定の文字でピッチが変わる改造版Open JTalk（ビルド済みバイナリ同梱版）"
authors = [{name = "maki249"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
# 読み込むパッケージディレクトリを pitsh に指定
packages = ["pitsh"]

[tool.setuptools.package-data]
# インストール対象に含めるファイルを明示
"pitsh" = [
    "dict/*",
    "voice/*",
    "bin/open_jtalk"
]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.pyc"]